# FSG

./: .fsg.rosinstall  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
cmake/: FindQuickHull.cmake
config/allegro/: autows.yaml  gen.yaml  hand_info.yaml  pc_path.yaml
config/barrett/: autows.yaml  gen.yaml  hand_info.yaml  pc_path.yaml
config/robotiq85/: autows.yaml  gen.yaml  hand_info.yaml  pc_path.yaml
config/slh/: autows.yaml  gen.yaml  hand_info.yaml  pc_path.yaml
config/srh/: autows.yaml  gen.yaml  pc_path.yaml
config/ycb_004_sugar_box/: pc_path.yaml
config/ycb_021_bleach_cleanser/: hand_info.yaml  pc_path.yaml
config/ycb_024_bowl/: hand_info.yaml  pc_path.yaml
config/ycb_062_dice/: hand_info.yaml  pc_path.yaml
docker/: Dockerfile
hdf5/allegro/: allegro_cleanser.h5
hdf5/barrett/: barrett_cleanser.h5
hdf5/robotiq85/: robotiq85_cleanser.h5
hdf5/slh/: slh_cleanser.h5
hdf5/srh/: grasp_res.h5  srh_cleanser_2f.h5  srh_cleanser_3f.h5  srh_cleanser_4f.h5  srh_cleanser_5f.h5
include/fsg/: cgal.h  cloud_type.h  eigen.h  fsg.h  gws.h  object.h  pcl.h  ros_pcl.h  visualizer.h  workspace.h
launch/: gen_grasp.launch
scripts/: read_keyframe.py  requirements.txt
scripts/autows/: autows.py  mj_robot.py  robot.py  sampler.py  ws_gen.py
scripts/grasp_gen/: reader_grasp.py  saver_grasp.py  utils.py
src/: cgal.cc  eigen.cc  gws.cc  main.cc  object.cc  visualizer.cc
srv/: GraspPose.srv
workspace/allegro/: finger_link_0.pcd  finger_link_1.pcd  finger_link_2.pcd  finger_link_3.pcd  ind.pcd  ind_orig.pcd  mid.pcd  mid_orig.pcd  rin.pcd  rin_orig.pcd  thu.pcd  thu_orig.pcd
workspace/barrett/: finger_link_0.pcd  finger_link_1.pcd  finger_link_2.pcd  ind.pcd  ind_orig.pcd  mid.pcd  mid_orig.pcd  thu.pcd  thu_orig.pcd
workspace/robotiq85/: finger_link_0.pcd  finger_link_1.pcd  left_orig.pcd  right.pcd
workspace/slh/: finger_link_0.pcd  finger_link_1.pcd  finger_link_2.pcd  finger_link_3.pcd  finger_link_4.pcd  ind.pcd  ind_orig.pcd  lit.pcd  lit_orig.pcd  mid.pcd  mid_orig.pcd  rin.pcd  rin_orig.pcd  thu.pcd  thu_orig.pcd
workspace/srh/: finger_link_0.pcd  finger_link_1.pcd  finger_link_2.pcd  finger_link_3.pcd  finger_link_4.pcd  ind.pcd  ind_orig.pcd  lit.pcd  lit_orig.pcd  mid.pcd  mid_orig.pcd  rin.pcd  rin_orig.pcd  thu.pcd  thu_orig.pcd
workspace/ycb_004_sugar_box/: finger_link_0.pcd  finger_link_1.pcd  finger_link_2.pcd  finger_link_3.pcd  finger_link_4.pcd  ind.pcd  ind_orig.pcd  lit.pcd  lit_orig.pcd  mid.pcd  mid_orig.pcd  rin.pcd  rin_orig.pcd  thu.pcd  thu_orig.pcd
workspace/ycb_021_bleach_cleanser/: finger_link_0.pcd  finger_link_1.pcd  finger_link_2.pcd  finger_link_3.pcd  finger_link_4.pcd  ind.pcd  ind_orig.pcd  lit.pcd  lit_orig.pcd  (+5 more)
(+39 files in other folders)
