<?xml version="1.0"?>
<package format="2">
  <name>fsg</name>
  <version>0.0.1</version>
  <description>
    Fingertip-contact-aware Sampling-based Grasp Generator
  </description>
  <maintainer email="wu@jsk.imi.i.u-tokyo.ac.jp">Liqi Wu</maintainer>
  <license>MIT</license>
  <author>Liqi Wu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_interface</depend>
  <depend>pcl_conversions</depend>
  <depend>sr_description</depend>
  <depend>robotiq_2f_85_gripper_visualization</depend>
  <depend>allegro_hand_description</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
